y.output
Terminals which are not used

   LT
   GT
   AMP
   LPAREN
   VBAR
   DOT
   DEBUG
   SINGLEPERIOD
   PATH
   PROMPT
   PWD
   EXTEND
   FORWARDSLASH
   ALIASLOOP
   QUOTE
   PIPE
   BACKGROUND
   BACKSLASH
   DOUBLEPERIOD
   SPACE
   VARIABLE
   VALUE
   OPTION


Grammar

    0 $accept: cmd $end

    1 cmd: builtin.cmd
    2    | simple.cmd

    3 builtin.cmd: CD NEWLINE
    4            | CD TILDE NEWLINE
    5            | CD WORD NEWLINE
    6            | BYE
    7            | NEWLINE
    8            | LS NEWLINE
    9            | LS WORD NEWLINE
   10            | LS STRING NEWLINE
   11            | SETENV NEWLINE
   12            | SETENV WORD NEWLINE
   13            | SETENV WORD WORD NEWLINE
   14            | UNSETENV NEWLINE
   15            | UNSETENV WORD NEWLINE
   16            | PRINTENV NEWLINE
   17            | ALIAS NEWLINE
   18            | ALIAS WORD WORD NEWLINE
   19            | ALIAS WORD STRING NEWLINE
   20            | UNALIAS WORD NEWLINE

   21 simple.cmd: WORD NEWLINE
   22           | WORD WORD NEWLINE
   23           | WORD STRING NEWLINE


Terminals, with rules where they appear

$end (0) 0
error (256)
LT (258)
GT (259)
AMP (260)
LPAREN (261)
VBAR (262)
DOT (263)
DEBUG (264)
NEWLINE (265) 3 4 5 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
TILDE (266) 4
LS (267) 8 9 10
SINGLEPERIOD (268)
SETENV (269) 11 12 13
PATH (270)
PROMPT (271)
CD (272) 3 4 5
BYE (273) 6
ALIAS (274) 17 18 19
UNALIAS (275) 20
PWD (276)
EXTEND (277)
FORWARDSLASH (278)
ALIASLOOP (279)
UNSETENV (280) 14 15
PRINTENV (281) 16
QUOTE (282)
PIPE (283)
BACKGROUND (284)
BACKSLASH (285)
DOUBLEPERIOD (286)
WORD (287) 5 9 12 13 15 18 19 20 21 22 23
SPACE (288)
VARIABLE (289)
VALUE (290)
STRING (291) 10 19 23
OPTION (292)


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
cmd (39)
    on left: 1 2, on right: 0
builtin.cmd (40)
    on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20,
    on right: 1
simple.cmd (41)
    on left: 21 22 23, on right: 2


state 0

    0 $accept: . cmd $end

    NEWLINE   shift, and go to state 1
    LS        shift, and go to state 2
    SETENV    shift, and go to state 3
    CD        shift, and go to state 4
    BYE       shift, and go to state 5
    ALIAS     shift, and go to state 6
    UNALIAS   shift, and go to state 7
    UNSETENV  shift, and go to state 8
    PRINTENV  shift, and go to state 9
    WORD      shift, and go to state 10

    cmd          go to state 11
    builtin.cmd  go to state 12
    simple.cmd   go to state 13


state 1

    7 builtin.cmd: NEWLINE .

    $default  reduce using rule 7 (builtin.cmd)


state 2

    8 builtin.cmd: LS . NEWLINE
    9            | LS . WORD NEWLINE
   10            | LS . STRING NEWLINE

    NEWLINE  shift, and go to state 14
    WORD     shift, and go to state 15
    STRING   shift, and go to state 16


state 3

   11 builtin.cmd: SETENV . NEWLINE
   12            | SETENV . WORD NEWLINE
   13            | SETENV . WORD WORD NEWLINE

    NEWLINE  shift, and go to state 17
    WORD     shift, and go to state 18


state 4

    3 builtin.cmd: CD . NEWLINE
    4            | CD . TILDE NEWLINE
    5            | CD . WORD NEWLINE

    NEWLINE  shift, and go to state 19
    TILDE    shift, and go to state 20
    WORD     shift, and go to state 21


state 5

    6 builtin.cmd: BYE .

    $default  reduce using rule 6 (builtin.cmd)


state 6

   17 builtin.cmd: ALIAS . NEWLINE
   18            | ALIAS . WORD WORD NEWLINE
   19            | ALIAS . WORD STRING NEWLINE

    NEWLINE  shift, and go to state 22
    WORD     shift, and go to state 23


state 7

   20 builtin.cmd: UNALIAS . WORD NEWLINE

    WORD  shift, and go to state 24


state 8

   14 builtin.cmd: UNSETENV . NEWLINE
   15            | UNSETENV . WORD NEWLINE

    NEWLINE  shift, and go to state 25
    WORD     shift, and go to state 26


state 9

   16 builtin.cmd: PRINTENV . NEWLINE

    NEWLINE  shift, and go to state 27


state 10

   21 simple.cmd: WORD . NEWLINE
   22           | WORD . WORD NEWLINE
   23           | WORD . STRING NEWLINE

    NEWLINE  shift, and go to state 28
    WORD     shift, and go to state 29
    STRING   shift, and go to state 30


state 11

    0 $accept: cmd . $end

    $end  shift, and go to state 31


state 12

    1 cmd: builtin.cmd .

    $default  reduce using rule 1 (cmd)


state 13

    2 cmd: simple.cmd .

    $default  reduce using rule 2 (cmd)


state 14

    8 builtin.cmd: LS NEWLINE .

    $default  reduce using rule 8 (builtin.cmd)


state 15

    9 builtin.cmd: LS WORD . NEWLINE

    NEWLINE  shift, and go to state 32


state 16

   10 builtin.cmd: LS STRING . NEWLINE

    NEWLINE  shift, and go to state 33


state 17

   11 builtin.cmd: SETENV NEWLINE .

    $default  reduce using rule 11 (builtin.cmd)


state 18

   12 builtin.cmd: SETENV WORD . NEWLINE
   13            | SETENV WORD . WORD NEWLINE

    NEWLINE  shift, and go to state 34
    WORD     shift, and go to state 35


state 19

    3 builtin.cmd: CD NEWLINE .

    $default  reduce using rule 3 (builtin.cmd)


state 20

    4 builtin.cmd: CD TILDE . NEWLINE

    NEWLINE  shift, and go to state 36


state 21

    5 builtin.cmd: CD WORD . NEWLINE

    NEWLINE  shift, and go to state 37


state 22

   17 builtin.cmd: ALIAS NEWLINE .

    $default  reduce using rule 17 (builtin.cmd)


state 23

   18 builtin.cmd: ALIAS WORD . WORD NEWLINE
   19            | ALIAS WORD . STRING NEWLINE

    WORD    shift, and go to state 38
    STRING  shift, and go to state 39


state 24

   20 builtin.cmd: UNALIAS WORD . NEWLINE

    NEWLINE  shift, and go to state 40


state 25

   14 builtin.cmd: UNSETENV NEWLINE .

    $default  reduce using rule 14 (builtin.cmd)


state 26

   15 builtin.cmd: UNSETENV WORD . NEWLINE

    NEWLINE  shift, and go to state 41


state 27

   16 builtin.cmd: PRINTENV NEWLINE .

    $default  reduce using rule 16 (builtin.cmd)


state 28

   21 simple.cmd: WORD NEWLINE .

    $default  reduce using rule 21 (simple.cmd)


state 29

   22 simple.cmd: WORD WORD . NEWLINE

    NEWLINE  shift, and go to state 42


state 30

   23 simple.cmd: WORD STRING . NEWLINE

    NEWLINE  shift, and go to state 43


state 31

    0 $accept: cmd $end .

    $default  accept


state 32

    9 builtin.cmd: LS WORD NEWLINE .

    $default  reduce using rule 9 (builtin.cmd)


state 33

   10 builtin.cmd: LS STRING NEWLINE .

    $default  reduce using rule 10 (builtin.cmd)


state 34

   12 builtin.cmd: SETENV WORD NEWLINE .

    $default  reduce using rule 12 (builtin.cmd)


state 35

   13 builtin.cmd: SETENV WORD WORD . NEWLINE

    NEWLINE  shift, and go to state 44


state 36

    4 builtin.cmd: CD TILDE NEWLINE .

    $default  reduce using rule 4 (builtin.cmd)


state 37

    5 builtin.cmd: CD WORD NEWLINE .

    $default  reduce using rule 5 (builtin.cmd)


state 38

   18 builtin.cmd: ALIAS WORD WORD . NEWLINE

    NEWLINE  shift, and go to state 45


state 39

   19 builtin.cmd: ALIAS WORD STRING . NEWLINE

    NEWLINE  shift, and go to state 46


state 40

   20 builtin.cmd: UNALIAS WORD NEWLINE .

    $default  reduce using rule 20 (builtin.cmd)


state 41

   15 builtin.cmd: UNSETENV WORD NEWLINE .

    $default  reduce using rule 15 (builtin.cmd)


state 42

   22 simple.cmd: WORD WORD NEWLINE .

    $default  reduce using rule 22 (simple.cmd)


state 43

   23 simple.cmd: WORD STRING NEWLINE .

    $default  reduce using rule 23 (simple.cmd)


state 44

   13 builtin.cmd: SETENV WORD WORD NEWLINE .

    $default  reduce using rule 13 (builtin.cmd)


state 45

   18 builtin.cmd: ALIAS WORD WORD NEWLINE .

    $default  reduce using rule 18 (builtin.cmd)


state 46

   19 builtin.cmd: ALIAS WORD STRING NEWLINE .

    $default  reduce using rule 19 (builtin.cmd)
